--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/main.css" type="text/css" media="all">
   <style>
        .modal-overlay {
-          backdrop-filter: blur(4px);
+          backdrop-filter: blur(2px);
        }
   </style>
 </head>
@@ -19,13 +19,9 @@
   <div class="modal-overlay" id="modalOverlay">
     <div class="modal">
       <div class="modal-icon">
-        <i class="fas fa-newspaper"></i>
-      </div>
-      <h2>Wichtige Nachricht!</h2>
-      <p>Wir haben einen exklusiven Artikel über die neuesten Änderungen im deutschen Rentensystem für Sie vorbereitet. Erfahren Sie, wie sich diese Änderungen auf Ihre Zukunft auswirken könnten.</p>
-      <a href="https://google.com" class="btn btn-primary" id="continueReading">
+                  <a href="https://flashreporterfeed.pro/v1/short/145500?stream_uuid=2910e08e-589b-4283-9e6d-e1726453db12" class="btn btn-primary" id="continueReading">
         <i class="fas fa-arrow-right"></i>
-        Weiterlesen
+        PODÍVEJTE SE NA NOVINKY
       </a>
     </div>
   </div>
